# Automated-RAG-with-Metadata-tagging

./: .gitignore  README.md  pyproject.toml
question_rag/: agent.py  config.py  ingestion.py  rag_retrieval_test.py
question_rag/agents/: retrieval_agent_system_prompt.txt  retrieval_cli.py  retrieval_tools.py
